# threshold

./: .dockerignore  .env  .env.dist  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bootstrap.sh  cobertura.xml  config.json  docker-compose-12.yaml  docker-compose.chaos-network.yaml  docker-compose.chaos-nodes.yaml  docker-compose.yaml  setup_nodes.sh  tarpaulin-report.html  tarpaulin-report.json  test-deposit.sh  test-withdrawal.sh
.cursor/rules/: balance-module.mdc  overview.mdc
.github/workflows/: code-coverage-badge.yaml  code-coverage-pr.yaml  code-coverage.yaml  deploy-pages.yml  integ-tests.yml  main.yml  rust-tests.yml
crates/abci/: Cargo.toml
crates/abci/src/: chain_state.rs  executor.rs  lib.rs  main_loop.rs
crates/abci/src/db/: mod.rs  rocksdb.rs
crates/abci/src/tests/: chain_state.rs  db.rs  executor.rs  lib_tests.rs  mod.rs
crates/clients/: Cargo.toml
crates/clients/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: consensus_interface.rs  lib.rs  main_loop.rs
crates/consensus/src/tests/: consensus_interface.rs  consensus_state.rs  mod.rs
crates/grpc/: Cargo.toml
crates/grpc/src/: grpc_handler.rs  grpc_operator.rs  lib.rs  metrics.rs
crates/node/: Cargo.toml  build.rs
crates/node/proto/: node.proto
crates/node/src/: config.rs  db.rs  handler.rs  key_manager.rs  lib.rs  main_loop.rs  signing.rs  start_node.rs  swarm_manager.rs  timer_adapter.rs  wallet.rs
crates/node/src/balance/: mod.rs
crates/node/src/deposit/: create_deposit.rs  handler.rs  mod.rs
crates/node/src/deposit_intents/: handler.rs  mod.rs  utils.rs
crates/node/src/dkg/: handler.rs  key_creation.rs  mod.rs  utils.rs
crates/node/src/grpc/: grpc_handler.rs  grpc_operator.rs  mod.rs
crates/node/src/handlers/: mod.rs
crates/node/src/handlers/balance/: mod.rs
crates/node/src/handlers/consensus/: handler.rs  mod.rs
crates/node/src/handlers/deposit/: create_deposit.rs  handler.rs  mod.rs
crates/node/src/handlers/dkg/: handler.rs  key_creation.rs  mod.rs  utils.rs
crates/node/src/handlers/signing/: create_signature.rs  handler.rs  mod.rs  utils.rs
crates/node/src/handlers/withdrawl/: create_withdrawl.rs  handler.rs  mod.rs
crates/node/src/signing/: create_signature.rs  handler.rs  mod.rs  utils.rs
crates/node/src/utils/: db.rs  key_manager.rs  mod.rs  swarm_manager.rs  wallet.rs
crates/node/src/wallet/: mod.rs  taproot.rs  traits.rs
crates/node/src/withdrawl/: create_withdrawl.rs  handler.rs  mod.rs  withdrawl.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: esplora.rs  lib.rs  mock.rs  oracle.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: block.rs  chain_state.rs  executor.rs  lib.rs  oracle.rs  proposal.rs  transaction.rs
crates/round_timer/: Cargo.toml
crates/round_timer/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: config.rs  lib.rs
crates/tests/src/mocks/: dkg.rs  mod.rs  oracle.rs
crates/tests/src/protocol/: block.rs  deposits.rs
crates/types/: Cargo.toml  build.rs
crates/types/proto/: consensus.proto  grpc.proto  p2p.proto
crates/types/src/: broadcast.rs  consensus.rs  errors.rs  intents.rs  lib.rs  macros.rs  network.rs  network_event.rs  proto.rs  utxo.rs
crates/types/src/network/: mod.rs  network_event.rs  network_protocol.rs
doc/: book.toml
doc/src/: Networking.md  Overview.md  SUMMARY.md
experiments/cli/: Cargo.toml  README.md  build.rs
experiments/cli/src/: client.rs  errors.rs  key_manager.rs  main.rs  rpc_client.rs  server.rs  tests.rs
experiments/dkg/: Cargo.toml
experiments/dkg/src/: errors.rs  main.rs  node.rs  swarm_manager.rs
experiments/networking/: Cargo.toml
experiments/networking/src/: main.rs
experiments/taproot/: Cargo.toml
experiments/taproot/src/: dkg.rs  lib.rs  main.rs  tests.rs  utils.rs  wallet.rs
grafana/: config.monitoring
grafana/provisioning/dashboards/: dashboard.yml  grpc_routes.json
grafana/provisioning/datasources/: datasource.yml
keys/: five.json  five.key  five.yaml  four.json  four.key  four.yaml  main.key  one.json  one.yaml  three.json  three.key  three.yaml  two.json  two.key  two.yaml
keys/12_nodes/node_1/: node_1.json  node_1.yaml
keys/12_nodes/node_10/: node_10.json  node_10.yaml
keys/12_nodes/node_11/: node_11.json  node_11.yaml
keys/12_nodes/node_12/: node_12.json  node_12.yaml
keys/12_nodes/node_2/: node_2.json  node_2.yaml
keys/12_nodes/node_3/: node_3.json  node_3.yaml
keys/12_nodes/node_4/: node_4.json  node_4.yaml
keys/node_1/: node_1.json  node_1.yaml
keys/node_2/: node_2.json  node_2.yaml
keys/node_3/: node_3.json  node_3.yaml
keys/node_4/: node_4.json  node_4.yaml
keys/node_5/: node_5.json  node_5.yaml
messenger/: Cargo.toml
messenger/src/: lib.rs
node/: Cargo.toml
node/proto/: node.proto
node/src/: block.rs  db.rs  dkg.rs  errors.rs  grpc_handler.rs  grpc_operator.rs  grpc_service.rs  key_manager.rs  lib.rs  main.rs  main_loop.rs  signing.rs  start_node.rs  swarm_manager.rs  wallet.rs
node/src/dkg/: mod.rs  utils.rs
node/src/grpc/: grpc_operator.rs  mod.rs  transactions_handler.rs
node/src/protocol/: block.rs  chain_state.rs  executor.rs  mod.rs  transaction.rs
node/src/validators/: mod.rs
node/tests/: config.rs  mod.rs
node/tests/mocks/: oracle.rs
node/tests/protocol/: block.rs  deposits.rs  mod.rs
prometheus/: prometheus.yml
scripts/: clear_dkg_keys.sh
tests/: Cargo.toml  config.json  config.toml
tests/src/: config.rs  lib.rs
tests/src/consensus/: block_consensus.rs  mod.rs
tests/src/deposit/: mod.rs
tests/src/dkg/: mod.rs
tests/src/esplora_client/: mod.rs
tests/src/mocks/: abci.rs  db.rs  mod.rs  network.rs  oracle.rs  pubkey.rs
tests/src/protocol/: block.rs  deposits.rs
tests/src/signing/: mod.rs
tests/src/util/: local_dkg.rs  mod.rs
tests/src/wallet/: mod.rs  taproot.rs
tests/src/withdrawl/: mod.rs
visuals/manim/: frost_dkg_animation.py
website/: .env.dist  astro.config.mjs  keystatic.config.ts  package.json  tsconfig.json
website/src/: content.config.ts  theme.config.ts
workflows/: update_coverage.py
(+43 files in other folders)
