[workspace]
members = [
    "bin/cli",
    "bin/utxo-spend",
    "bin/signing",
    "tests",
    "crates/node",
    "crates/protocol",
    "crates/types",
    "crates/oracle",
]
resolver = "2"

[workspace.package]
name = "threshold"
version = "0.1.0"
edition = "2021"
description = "building the best infrastructure for decentralized multisigs"
license = "MIT"
repository = "https://github.com/onthreshold/threshold/"
keywords = ["bitcoin", "cryptocurrency", "wallet", "multisig"]
categories = ["cryptography", "blockchain"]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0"
frost-secp256k1 = "2.1.0"
bitcoin = { version = "0.32.6", features = ["rand-std"] }
libp2p = { version = "0.54", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
hex = "0.4"
rand = "0.9.1"
esplora-client = { version = "*", default-features = false, features = [
    "async-https",
    "tokio",
] }
bincode = { version = "2.0.1", features = ["serde"] }
sha2 = "0.10.9"
rocksdb = "0.23.0"
async-trait = "0.1.88"
dotenvy = "0.15"
bip39 = "2.1.0"
base64 = "0.22.1"
tonic = "0.13"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"