[workspace]
members = [
    "bin/cli",
    "bin/utxo-spend",
    "tests",
    "crates/node",
    "crates/protocol",
    "crates/types",
    "crates/oracle", "crates/abci", "messenger", "crates/grpc", "crates/consensus_timer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "building the best infrastructure for decentralized multisigs"
license = "MIT"
keywords = ["bitcoin", "cryptocurrency", "wallet", "multisig"]
categories = ["cryptography", "blockchain"]
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
serde_json = "1.0"
frost-secp256k1 = "2.1.0"
bitcoin = { version = "0.32.6", features = ["rand-std", "serde"] }
bitcoin_hashes = "0.14.0"
bitcoin-internals = "0.3.0"
libp2p = { version = "0.55", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
    "ed25519",
] }
hex = "0.4"
rand = "0.9.1"
rand_core = "0.9.3"
rand_chacha = "0.9.0"
esplora-client = { version = "0.12.0", default-features = false, features = [
    "async-https",
    "tokio",
] }
bincode = { version = "2.0.1", features = ["serde"] }
sha2 = "0.10.9"
rocksdb = "0.23.0"
async-trait = "0.1.88"
dotenvy = "0.15"
bip39 = { version = "2.1.0", features = ["rand", "rand_core"] }
base64 = "0.22.1"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13.5"
tempfile = "3.20.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tracing = "0.1"
grpc = { path = "crates/grpc" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"