[package]
name = "messenger"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio.workspace = true
types = { path = "../crates/types" }

[lints]
workspace = true
