[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
