[package]
name = "node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vault-node"
path = "src/main.rs"

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
tonic = "0.13"
prost = "0.13"
derive_more = { version = "2.0.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
tonic-build = "0.13"
