[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
tonic = "0.13"
prost = "0.13"
derive_more = { version = "2.0.1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rpassword = "7.3"
uuid = { version = "1.17.0", features = ["v4"] }
rocksdb = "0.23.0"
sha2 = "0.10.9"
bincode = { version = "2.0.1", features = ["serde"] }
esplora-client = { version = "*", default-features = false, features = ["async-https"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
tonic-build = "0.13"
