[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
protocol = { path = "../crates/protocol" }
node = { path = "../crates/node" }
types = { path = "../crates/types" }
libp2p = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
esplora-client = { workspace = true }
clients = { path = "../crates/clients" }
sha2 = { workspace = true }
bincode = { workspace = true }
log = "0.4.27"
env_logger = "0.11.8"
rand = { workspace = true }
hex = { workspace = true }
frost-secp256k1 = { workspace = true }
