[package]
name = "tests"
description = "Integration tests for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "integration-tests"
path = "src/bin/integration-tests/main.rs"

[dependencies]
bitcoin.workspace = true
libp2p.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
esplora-client.workspace = true
sha2.workspace = true
bincode.workspace = true
log.workspace = true
rand.workspace = true
hex.workspace = true
frost-secp256k1.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
bip39.workspace = true
clap.workspace = true

abci = { path = "../crates/abci" }
protocol = { path = "../crates/protocol" }
node = { path = "../crates/node" }
types = { path = "../crates/types" }
grpc = { path = "../crates/grpc" }
oracle = { path = "../crates/oracle" }
messenger = { path = "../messenger" }
