[package]
name = "abci"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
protocol = { path = "../protocol" }
types = { path = "../types" }
oracle = { path = "../oracle" }
bitcoin = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }
frost-secp256k1 = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing = { workspace = true }
messenger = { path = "../../messenger" }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
