[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
tokio = { workspace = true, features = ["full"] }
esplora-client = { workspace = true }
async-trait = "0.1.88"
tracing = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"