[package]
name = "clients"
version = "0.1.0"
edition = "2021"
description = "Client implementations for the Threshold network"
license = "MIT"
repository = "https://github.com/onthreshold/threshold/"
keywords = ["bitcoin", "cryptocurrency", "wallet", "client"]
categories = ["cryptography", "blockchain"]

[dependencies]
bitcoin = { workspace = true }
tokio = { workspace = true, features = ["full"] }
esplora-client = { workspace = true }
async-trait = "0.1.88"
tracing = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"