[package]
name = "grpc"
description = "gRPC communication for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "grpc"
path = "src/lib.rs"

[dependencies]
futures.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
metrics.workspace = true

types = { path = "../types" }

[lints]
workspace = true
