[package]
name = "node"
version = "0.1.0"
edition = "2024"

[lib]
name = "node"
path = "src/lib.rs"

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
tonic = "0.13"
prost = "0.13"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rpassword = "7.3"
uuid = { version = "1.17.0", features = ["v4"] }
rocksdb = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
esplora-client = { workspace = true }
directories = "6.0.0"
async-trait = { workspace = true }
protocol = { path = "../protocol" }
types = { path = "../types" }
serde_yaml = "0.9.34"
clients = { path = "../clients" }
dotenvy = { workspace = true }
bip39 = "2.1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
tonic-build = "0.13"
