[package]
name = "node"
description = "Node management and communication for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "node"
path = "src/lib.rs"

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
    "identify",
    "gossipsub",
    "mdns",
    "quic",
    "cbor",
] }
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
frost-secp256k1.workspace = true
rand.workspace = true
hex.workspace = true
bitcoin.workspace = true
tonic.workspace = true
prost.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
rpassword.workspace = true
uuid.workspace = true
rocksdb.workspace = true
sha2.workspace = true
bincode.workspace = true
esplora-client.workspace = true
directories.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true
dotenvy.workspace = true
bip39.workspace = true
num-traits.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
actix-web.workspace = true
itertools = "0.14"

protocol = { path = "../protocol" }
types = { path = "../types" }
oracle = { path = "../oracle" }
abci = { path = "../abci" }
messenger = { path = "../../messenger" }
grpc = { path = "../grpc" }
consensus = { path = "../consensus" }

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true



[lints]
workspace = true
