[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
tokio = { workspace = true, features = ["full"] }
esplora-client = { workspace = true }
async-trait = "0.1.88"
tracing = "0.1"
types = { path = "../types" }
hex = { workspace = true }
dyn-clone = "1.0.19"

[lints]
workspace = true