[package]
name = "oracle"
description = "Oracle communication service for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bitcoin.workspace = true
tokio.workspace = true
esplora-client.workspace = true
async-trait.workspace = true
tracing.workspace = true
hex.workspace = true
dyn-clone.workspace = true

types = { path = "../types" }

[lints]
workspace = true