[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
bitcoin = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
esplora-client = { workspace = true }
types = { path = "../types" }
dotenvy = { workspace = true }
hex = { workspace = true }
