[package]
name = "protocol"
description = "Protocol for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
bincode.workspace = true
sha2.workspace = true
bitcoin.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true
esplora-client.workspace = true
hex.workspace = true

types = { path = "../types" }
oracle = { path = "../oracle" }

[lints]
workspace = true