[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
protocol = { path = "../protocol" }
node = { path = "../../node" }
types = { path = "../types" }
libp2p = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
