[package]
name = "types"
description = "Types for the Threshold network"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/onthreshold/threshold/"
license = "MIT"
keywords = ["bitcoin", "cryptocurrency", "wallet", "cli"]
categories = ["cryptography", "blockchain"]

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
tokio = { workspace = true }
rocksdb = { workspace = true }
bitcoin = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
frost-secp256k1 = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.13"

[lints]
workspace = true