[package]
name = "types"
description = "Types for the Threshold network"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
derive_more.workspace = true
tokio.workspace = true
rocksdb.workspace = true
bitcoin.workspace = true
libp2p.workspace = true
serde.workspace = true
frost-secp256k1.workspace = true
bincode.workspace = true
prost.workspace = true
tonic.workspace = true
serde_json.workspace = true
prost-types.workspace = true
futures.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true


[lints]
workspace = true