[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keygen"
path = "src/main.rs"

[dependencies]
libp2p = { workspace = true, features = ["ed25519"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0.12"
base64 = "0.21"
rpassword = "7.2"
bs58 = "0.5"
directories = "5.0"
argon2 = "0.5"
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"